# mia_meta_google

./: .gitignore  CONTEXT_FOR_HOME.md  GITHUB_SETUP.md  start_with_permanent_ngrok.sh  test_mcp_simple.py  test_meta_direct.py  update_dfsa_meta.py
backend/: config.py  database.py  mia.db  simple_adk_server.py
backend/endpoints/: auth_endpoints.py  auth_endpoints_simple.py  chat_endpoint.py  meta_auth_endpoints.py
backend/services/: account_setup.py  adk_mcp_integration.py  mcp_client_fixed.py
mcp-backend/: AD_AGENCY_GUIDE.md  API_ONLY_README.md  COMPREHENSIVE_ENDPOINT.md  DEPLOYMENT_README.md  Dockerfile  Dockerfile.dual-service  Dockerfile.fastmcp  Dockerfile.lightweight  Dockerfile.minimal  ONE_CLICK_DEPLOY.md  QUICK_DEPLOY_GUIDE.md  README.md  README_MCP.md  aws-complete-deploy.sh  claude_desktop_mcp_config.json  claude_desktop_venv_config.json  clean_consolidator.py  credential_manager.py  data_integrator.py  data_loader.py  data_standardizer.py  database.py  deploy-digitalocean.sh  deploy-fastmcp.sh  deploy-minimal-buildpack.sh  deploy-minimal.sh  deployment_guide.md  docker-compose.yml  insights_generator.py  local-build-push.sh  main.ipynb  main.py  mcp_config.json  minimal-deploy.sh  models.py  oauth_setup_guide.md  one-click-deploy.sh  pyproject.toml  railway-deploy.json  requirements-data-apis.txt  (+13 more)
mcp-backend/analytics/: ad_performance.py  funnel_optimizer.py  journey_analyzer.py  recommendation_engine.py
mcp-backend/cloud-deployments/: aws-ecs-dual-services.json  aws-ecs-task-definition.json  digitalocean-app.yaml  gcp-cloud-run.yaml
mcp-backend/routes/: ad_insights.py  analyze.py  clean_ad_insights.py  clean_insights.py  clean_website_analytics.py  comprehensive_insights.py  comprehensive_insights_backup.py  comprehensive_insights_new.py  data_sources.py  eda.py  google_ads_api.py  google_analytics_api.py  google_oauth.py  meta_ads_api.py  meta_oauth.py  multi_platform_insights.py  predict.py  predict_with_external.py  website_analytics.py
mcp-backend/scripts/: deploy.sh
mcp-backend/tests/: test_predict_with_external.py
src/components/: AccountSelectionPage.tsx  CreativePageFixed.tsx  FigmaLoginModal.tsx  GrowthPage.tsx  MainViewCopy.tsx  OptimizePage.tsx  ProtectPage.tsx
src/contexts/: SessionContext.tsx
src/services/: accountService.ts  auth.ts
src/utils/: api.ts  clearMetaAuth.ts
